--- a/CSS_CSS-3/basic-properties-13-6.html
+++ b/CSS_CSS-3/basic-properties-13-6.html
@@ -62,7 +62,7 @@
   </head>
   <body>
     <p>This is p tag</p>
-    <i>This is i tag</i>
+    <i>That is i tag</i>
     <u>This is u tag</u>
     <b>This is b tag</b>
     <div class="box"></div>
