Module 3 Lecture 9 Website making

--- a/CSS_CSS-3/flex-4-7.html
+++ b/CSS_CSS-3/flex-4-7.html
@@ -64,6 +64,9 @@
         /* row-gap: 50px; */
         /* column-gap: 20px; */
         gap: 50px 20px;
+
+        /* flex-flow: flex-direction flex-wrap; */
+        /* flex-flow: column wrap; */
       }
       .child {
         height: 50px;
