Module 3 Website building 13-7

--- a/software_company_website/index.html
+++ b/software_company_website/index.html
@@ -29,7 +29,20 @@
     </header>
     <main>
       <!-- hero-section -->
-      <section id="hero-section"></section>
+      <section id="hero-section">
+        <div class="content">
+          <h2>
+            Great <span>Product</span> is <br /><strong>built by great</strong>
+            <span>teams</span>
+          </h2>
+          <p>
+            We help build and manage a team of world-class developers to bring
+            your vision to life
+          </p>
+          <div class="btn">Let's get Started!</div>
+        </div>
+        <img src="images/web-development 1.png" alt="" />
+      </section>
       <!-- services-section -->
       <section id="services-section"></section>
       <!-- about-section -->
