Module 3 Website Making 16-7

--- a/software_company_website/index.html
+++ b/software_company_website/index.html
@@ -10,6 +10,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -44,19 +51,425 @@
         <img src="images/web-development 1.png" alt="" />
       </section>
       <!-- services-section -->
-      <section id="services-section"></section>
+      <section id="services-section">
+        <h2>Services we offer</h2>
+        <div class="service-cards">
+          <div class="service-card">
+            <div class="icon">
+              <img src="images/Code_perspective_matte.png" alt="" />
+            </div>
+            <h3>Web Design & Development</h3>
+            <p>
+              A Website is an extension of yourself and we can help you to
+              express it properly. Your website is your number one marketing
+              asset because we live in a digital age.
+            </p>
+          </div>
+          <div class="service-card">
+            <div class="icon">
+              <img src="images/Code_perspective_matte.png" alt="" />
+            </div>
+            <h3>Web Design & Development</h3>
+            <p>
+              A Website is an extension of yourself and we can help you to
+              express it properly. Your website is your number one marketing
+              asset because we live in a digital age.
+            </p>
+          </div>
+          <div class="service-card">
+            <div class="icon">
+              <img src="images/Code_perspective_matte.png" alt="" />
+            </div>
+            <h3>Web Design & Development</h3>
+            <p>
+              A Website is an extension of yourself and we can help you to
+              express it properly. Your website is your number one marketing
+              asset because we live in a digital age.
+            </p>
+          </div>
+        </div>
+      </section>
       <!-- about-section -->
-      <section id="about-section"></section>
+      <section id="about-section">
+        <div class="content">
+          <div class="section-heading">
+            <h2 class="top-heading">Meet the people</h2>
+            <h2 class="heading">We are Working With</h2>
+          </div>
+          <p>
+            We <span> add development capacity</span> to tech teams. Our value
+            isn't limited to building teams but is equally distributed across
+            the project lifecycle. We are a custom software development company
+            that guarantees the successful delivery of your project.
+          </p>
+          <a href="#" class="special-link"
+            >See more information <i class="fa-solid fa-arrow-right"></i>
+          </a>
+        </div>
+        <img src="images/Rectangle 8Rectangle 8.png" alt="" />
+      </section>
       <!-- clients-section -->
-      <section id="clients-section"></section>
+      <section id="clients-section">
+        <div class="section-heading">
+          <h2 class="top-heading">Meet the people</h2>
+          <h2 class="heading">We are Working With</h2>
+        </div>
+        <div class="clients-list">
+          <img src="images/logo3 (1).png" alt="Image not loading" />
+          <img src="images/logo5 (1).png" alt="Image not loading" />
+          <img src="images/Logo-6 (1).png" alt="Image not loading" />
+          <img src="images/Logo-7 (1).png" alt="Image not loading" />
+          <img src="images/logo8 (1).png" alt="Image not loading" />
+          <img src="images/logo9 (1).png" alt="Image not loading" />
+          <img src="images/logo-9 (1).png" alt="Image not loading" />
+        </div>
+      </section>
       <!-- testimonials-section -->
-      <section id="testimonials-section"></section>
+      <section id="testimonials-section">
+        <div class="section-heading center-heading">
+          <h2 class="top-heading">Why customer love</h2>
+          <h2 class="heading">working with us</h2>
+        </div>
+        <p>
+          Without any doubt I recommend Alcaline Solutions as one of the best
+          web design and digital marketing agencies. One of the best agencies
+          I've came across so far. Wouldn't be hesitated to introduce their work
+          to someone else.
+        </p>
+        <div class="testimonials-list">
+          <div class="user-feedback-card">
+            <img src="images/Ellipse 1 (1).png" alt="" />
+            <div class="rating-stars">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <div class="user-info">
+              <h3>Shyam Padhiyar</h3>
+              <h4>Smart Insaan</h4>
+            </div>
+          </div>
+          <div class="user-feedback-card">
+            <img src="images/Ellipse 1 (2).png" alt="" />
+            <div class="rating-stars">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <div class="user-info">
+              <h3>Shyam Padhiyar</h3>
+              <h4>Smart Insaan</h4>
+            </div>
+          </div>
+          <div class="user-feedback-card">
+            <img src="images/Ellipse 1 (3).png" alt="" />
+            <div class="rating-stars">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <div class="user-info">
+              <h3>Shyam Padhiyar</h3>
+              <h4>Smart Insaan</h4>
+            </div>
+          </div>
+          <div class="user-feedback-card">
+            <img src="images/Ellipse 1 (4).png" alt="" />
+            <div class="rating-stars">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <div class="user-info">
+              <h3>Shyam Padhiyar</h3>
+              <h4>Smart Insaan</h4>
+            </div>
+          </div>
+          <div class="user-feedback-card">
+            <img src="images/Ellipse 1.png" alt="" />
+            <div class="rating-stars">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <div class="user-info">
+              <h3>Shyam Padhiyar</h3>
+              <h4>Smart Insaan</h4>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- case-studies-section -->
-      <section id="case-studies-section"></section>
+      <section id="case-studies-section">
+        <div class="section-heading center-heading">
+          <h2 class="top-heading">Meet the people</h2>
+          <h2 class="heading">We are Working With</h2>
+        </div>
+        <div class="case-study-cards">
+          <div class="case-study card1">
+            <img src="images/Case-study__image.png" alt="" />
+            <div class="text">
+              <h3>Website design for SCFC Canada</h3>
+              <p>
+                Born out of a vision, a single-minded objective that puts
+                service before anything else, Swift Clearance and Forwarding
+                Corp. surging forth to deliver the best services in the shipping
+                and logistics scenario. Its meteoric rise stems out of a solid
+                foundation. The management boasts of over 20 years of rich and
+                varied experience in the <s></s>hipping and freight forwarding
+                industry.
+              </p>
+              <a href="#" class="special-link"
+                >Read more <i class="fa-solid fa-chevron-right"></i
+              ></a>
+            </div>
+          </div>
+
+          <!-- case studyy 2 -->
+          <div class="case-study card2">
+            <img src="images/Case-study__image (1).png" alt="" />
+            <div class="text">
+              <h3>Website design for SCFC Canada</h3>
+              <p>
+                Born out of a vision, a single-minded objective that puts
+                service before anything else, Swift Clearance and Forwarding
+                Corp. surging forth to deliver the best services in the shipping
+                and logistics scenario. Its meteoric rise stems out of a solid
+                foundation. The management boasts of over 20 years of rich and
+                varied experience in the shipping and freight forwarding
+                industry.
+              </p>
+              <a href="#" class="special-link"
+                >Read more <i class="fa-solid fa-chevron-right"></i>
+              </a>
+            </div>
+          </div>
+
+          <!-- case study 3 -->
+          <div class="case-study card3">
+            <img src="images/Case-study__image (2).png" alt="" />
+            <div class="text">
+              <h3>Website design for SCFC Canada</h3>
+              <p>
+                Born out of a vision, a single-minded objective that puts
+                service before anything else, Swift Clearance and Forwarding
+                Corp. surging forth to deliver the best services in the shipping
+                and logistics scenario. Its meteoric rise stems out of a solid
+                foundation. The management boasts of over 20 years of rich and
+                varied experience in the shipping and freight forwarding
+                industry.
+              </p>
+              <a href="#" class="special-link"
+                >Read more <i class="fa-solid fa-chevron-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- ways-section -->
-      <section id="ways-section"></section>
+      <section id="ways-section">
+        <div class="section-heading center-heading">
+          <h2 class="top-heading">Way of building</h2>
+          <h2 class="heading">Great software</h2>
+        </div>
+        <div class="ways-of-working-cards">
+          <div class="way-of-working-card">
+            <div class="content">
+              <h3>Build the right team to scale</h3>
+              <p>
+                Finding the right talent is not easy. We help you find the
+                talent that suits your needs, follows your processes, and sticks
+                with you long term not the case with freelancers
+              </p>
+              <p>
+                Our <span>delivery model</span> helps you cut costs and deliver
+                within budget.
+              </p>
+              <q>
+                Simform is quick to identify larger problem with the Software so
+                we decided to expand our scope to build new modules
+              </q>
+
+              <div class="avatar">
+                <div class="img2">
+                  <img src="images/Ellipse 1 (1).png" alt="" />
+                </div>
+                <div class="info">
+                  <p class="username">jeewa markram</p>
+                  <p class="desc">CEO</p>
+                </div>
+              </div>
+            </div>
+            <img src="images\Rectangle 19.png" alt="" />
+          </div>
+          <div class="way-of-working-card">
+            <img src="images\Rectangle 18.png" alt="" />
+            <div class="content">
+              <h3>Build the right team to scale</h3>
+              <p>
+                Finding the right talent is not easy. We help you find the
+                talent that suits your needs, follows your processes, and sticks
+                with you long term not the case with freelancers
+              </p>
+              <p>
+                Our <span>delivery model</span> helps you cut costs and deliver
+                within budget.
+              </p>
+              <q>
+                Simform is quick to identify larger problem with the Software so
+                we decided to expand our scope to build new modules
+              </q>
+
+              <div class="avatar">
+                <div class="img2">
+                  <img src="images/Ellipse 1 (2).png" alt="" />
+                </div>
+                <div class="info">
+                  <p class="username">jeewa markram</p>
+                  <p class="desc">CEO</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="way-of-working-card">
+            <div class="content">
+              <h3>Build the right team to scale</h3>
+              <p>
+                Finding the right talent is not easy. We help you find the
+                talent that suits your needs, follows your processes, and sticks
+                with you long term not the case with freelancers
+              </p>
+              <p>
+                Our <span>delivery model</span> helps you cut costs and deliver
+                within budget.
+              </p>
+              <q>
+                Simform is quick to identify larger problem with the Software so
+                we decided to expand our scope to build new modules
+              </q>
+
+              <div class="avatar">
+                <div class="img2">
+                  <img src="images/Ellipse 1 (3).png" alt="" />
+                </div>
+                <div class="info">
+                  <p class="username">jeewa markram</p>
+                  <p class="desc">CEO</p>
+                </div>
+              </div>
+            </div>
+            <img src="images\Rectangle 17.png" alt="" />
+          </div>
+        </div>
+      </section>
       <!-- dev-approach-section -->
-      <section id="dev-approach-section"></section>
+      <section id="dev-approach-section">
+        <div class="section-heading center-heading">
+          <h2 class="top-heading">Way of building</h2>
+          <h2 class="heading">Great software</h2>
+        </div>
+        <div class="approach-cards">
+          <div class="approach-card card1">
+            <div class="icon-image">
+              <img src="images\Rocket_perspective_matte.png" alt="" />
+            </div>
+            <div class="card-info">
+              <h5>UX Driven Engineering</h5>
+              <p>
+                Unlike other companies, we are a
+                <span style="color: black">UX first</span> development company.
+                Projects are driven by designers and they make sure design and
+                experiences translate to code.
+              </p>
+            </div>
+          </div>
+
+          <div class="approach-card card2">
+            <div class="icon-image">
+              <img src="images\Code_perspective_matte.png" alt="" />
+            </div>
+            <div class="card-info">
+              <h5>Developing Shared Understanding</h5>
+              <p>
+                Unlike other companies, we are a
+                <span style="color: lightblue">UX first</span> development
+                company. Projects are driven by designers and they make sure
+                design and experiences translate to code.
+              </p>
+            </div>
+          </div>
+
+          <div class="approach-card card3">
+            <div class="icon-image">
+              <img src="images\Heart_rate_perspective_matte.png" alt="" />
+            </div>
+            <div class="card-info">
+              <h5>Proven Experience and Expertise</h5>
+              <p>
+                Unlike other companies, we are a
+                <span style="color: lightpink">UX first</span> development
+                company. Projects are driven by designers and they make sure
+                design and experiences translate to code.
+              </p>
+            </div>
+          </div>
+
+          <div class="approach-card card4">
+            <div class="icon-image">
+              <img src="images\Shield_perspective_matte.png" alt="" />
+            </div>
+            <div class="card-info">
+              <h5>Security & Intellectual Property (IP)</h5>
+              <p>
+                Unlike other companies, we are a
+                <span style="color: rgb(107, 234, 227)">UX first</span>
+                development company. Projects are driven by designers and they
+                make sure design and experiences translate to code.
+              </p>
+            </div>
+          </div>
+
+          <div class="approach-card card5">
+            <div class="icon-image">
+              <img src="images\Success_perspective_matte.png" alt="" />
+            </div>
+            <div class="card-info">
+              <h5>Code Reviews</h5>
+              <p>
+                Unlike other companies, we are a
+                <span style="color: orange">UX first</span> development company.
+                Projects are driven by designers and they make sure design and
+                experiences translate to code.
+              </p>
+            </div>
+          </div>
+
+          <div class="approach-card card6">
+            <div class="icon-image">
+              <img src="images\Padlock_perspective_matte.png" alt="" />
+            </div>
+            <div class="card-info">
+              <h5>Quality Assurance & Testing</h5>
+              <p>
+                Unlike other companies, we are a
+                <span style="color: purple">UX first</span> development company.
+                Projects are driven by designers and they make sure design and
+                experiences translate to code.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- tech-stack-section -->
       <section id="tech-stack-section"></section>
       <!-- dev-process-section -->
