Module 3 Website making 18-7

--- a/software_company_website/index.html
+++ b/software_company_website/index.html
@@ -471,14 +471,159 @@
         </div>
       </section>
       <!-- tech-stack-section -->
-      <section id="tech-stack-section"></section>
+      <section id="tech-stack-section">
+        <div class="section-heading center-heading">
+          <h2 class="top-heading">Way of building</h2>
+          <h2 class="heading">Great software</h2>
+        </div>
+        <div class="tech-stack-links">
+          <a href="#">Backend</a>
+          <a href="#">Frontend</a>
+          <a href="#">Databases</a>
+          <a href="#">CMS</a>
+          <a href="#">Cloud Testing</a>
+          <a href="#">DevOps</a>
+        </div>
+        <div class="tech-stack-imgs">
+          <img
+            src="images/kisspng-mysqli-php-database-linux-coding-5ac4824a2e87e0 1.png"
+            alt=""
+          />
+          <img
+            src="images/kisspng-mysqli-php-database-linux-coding-5ac4824a2e87e0 1.png"
+            alt=""
+          />
+          <img
+            src="images/kisspng-mysqli-php-database-linux-coding-5ac4824a2e87e0 1.png"
+            alt=""
+          />
+          <img
+            src="images/kisspng-mysqli-php-database-linux-coding-5ac4824a2e87e0 1.png"
+            alt=""
+          />
+          <img
+            src="images/kisspng-mysqli-php-database-linux-coding-5ac4824a2e87e0 1.png"
+            alt=""
+          />
+          <img
+            src="images/kisspng-mysqli-php-database-linux-coding-5ac4824a2e87e0 1.png"
+            alt=""
+          />
+          <img
+            src="images/kisspng-mysqli-php-database-linux-coding-5ac4824a2e87e0 1.png"
+            alt=""
+          />
+          <img
+            src="images/kisspng-mysqli-php-database-linux-coding-5ac4824a2e87e0 1.png"
+            alt=""
+          />
+          <img
+            src="images/kisspng-mysqli-php-database-linux-coding-5ac4824a2e87e0 1.png"
+            alt=""
+          />
+        </div>
+      </section>
       <!-- dev-process-section -->
-      <section id="dev-process-section"></section>
+      <section id="dev-process-section">
+        <div class="section-heading center-heading">
+          <h2 class="top-heading">Way of building</h2>
+          <h2 class="heading">Great software</h2>
+        </div>
+      </section>
       <!-- resources-section -->
-      <section id="resources-section"></section>
+      <section id="resources-section">
+        <div class="section-heading center-heading">
+          <h2 class="top-heading">Way of building</h2>
+          <h2 class="heading">Great software</h2>
+        </div>
+
+        <div class="resources-cards">
+          <div class="resource-card">
+            <img src="images/Rectangle 10 (2).png" alt="" />
+            <p>
+              How to Build a Scalable Application up to 1 Million Users on AWS
+            </p>
+            <a href="#" class="special-link"
+              >Read More <span> &#10143; </span></a
+            >
+          </div>
+          <div class="resource-card">
+            <img src="images/Rectangle 10 (2).png" alt="" />
+            <p>
+              How to Build a Scalable Application up to 1 Million Users on AWS
+            </p>
+            <a href="#" class="special-link"
+              >Read More <span> &#10143; </span></a
+            >
+          </div>
+          <div class="resource-card">
+            <img src="images/Rectangle 10 (2).png" alt="" />
+            <p>
+              How to Build a Scalable Application up to 1 Million Users on AWS
+            </p>
+            <a href="#" class="special-link"
+              >Read More <span> &#10143; </span></a
+            >
+          </div>
+          <div class="resource-card">
+            <img src="images/Rectangle 10 (2).png" alt="" />
+            <p>
+              How to Build a Scalable Application up to 1 Million Users on AWS
+            </p>
+            <a href="#" class="special-link"
+              >Read More <span> &#10143; </span></a
+            >
+          </div>
+          <div class="resource-card">
+            <img src="images/Rectangle 10 (2).png" alt="" />
+            <p>
+              How to Build a Scalable Application up to 1 Million Users on AWS
+            </p>
+            <a href="#" class="special-link"
+              >Read More <span> &#10143; </span></a
+            >
+          </div>
+        </div>
+      </section>
       <!-- cta-section -->
-      <section id="cta-section"></section>
+      <section id="cta-section">
+        <h2>
+          Hire the best developers and <br />
+          designers around!
+        </h2>
+        <div class="btn">Hire Top Developers</div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="top-footer">
+        <div class="company-info">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad, porro?
+          </p>
+          <img src="" alt="" />
+        </div>
+        <div class="quick-links">
+          <h4>Links</h4>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Case Studies</a></li>
+            <li><a href="#">How it works</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Areas we've Serve</a></li>
+          </ul>
+        </div>
+        <div class="contact-us">
+          <h4>Contact us</h4>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi
+            eligendi minus illum provident, earum perferendis.
+          </p>
+          <h5>+9638527410</h5>
+        </div>
+      </div>
+      <div class="bottom-footer"></div>
+    </footer>
   </body>
 </html>
