--- a/software_company_website/index.html
+++ b/software_company_website/index.html
@@ -597,10 +597,11 @@
     <footer>
       <div class="top-footer">
         <div class="company-info">
+          <img src="images/company-logo.png" alt="" />
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad, porro?
           </p>
-          <img src="" alt="" />
+          <img src="images/google-page-speed 1.png" alt="" />
         </div>
         <div class="quick-links">
           <h4>Links</h4>
@@ -618,12 +619,22 @@
           <h4>Contact us</h4>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi
-            eligendi minus illum provident, earum perferendis.
+            eligendi.
           </p>
           <h5>+9638527410</h5>
+
+          <div class="socials">
+            <div class="icon"><i class="fa-brands fa-instagram"></i></div>
+            <div class="icon"><i class="fa-brands fa-facebook-f"></i></div>
+            <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+            <div class="icon"><i class="fa-brands fa-linkedin-in"></i></div>
+          </div>
         </div>
       </div>
-      <div class="bottom-footer"></div>
+      <hr />
+      <div class="bottom-footer">
+        &copy; 2024 Copyright by TTS Developers. All rights reserved.
+      </div>
     </footer>
   </body>
 </html>
