--- a/software_company_website/index.html
+++ b/software_company_website/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/max-576.css" />
     <link rel="stylesheet" href="css/min-576.css" />
     <link rel="stylesheet" href="css/min-768.css" />
+    <link rel="stylesheet" href="css/min-992.css" />
   </head>
   <body>
     <header>
@@ -57,7 +58,7 @@
           </p>
           <div class="btn">Let's get Started!</div>
         </div>
-        <img src="images/web-development 1.png" alt="" />
+        <img src="images/web-development 1.png" alt="" class="fluid-img" />
       </section>
       <!-- services-section -->
       <section id="services-section">
@@ -76,7 +77,11 @@
           </div>
           <div class="service-card">
             <div class="icon">
-              <img src="images/Code_perspective_matte.png" alt="" />
+              <img
+                src="images/Code_perspective_matte.png"
+                alt=""
+                class="fluid-img"
+              />
             </div>
             <h3>Web Design & Development</h3>
             <p>
@@ -115,7 +120,7 @@
             >See more information <i class="fa-solid fa-arrow-right"></i>
           </a>
         </div>
-        <img src="images/Rectangle 8Rectangle 8.png" alt="" />
+        <img src="images/Rectangle 8Rectangle 8.png" alt="" class="fluid-img" />
       </section>
       <!-- clients-section -->
       <section id="clients-section">
@@ -226,7 +231,7 @@
         </div>
         <div class="case-study-cards">
           <div class="case-study card1">
-            <img src="images/Case-study__image.png" alt="" />
+            <img src="images/Case-study__image.png" alt="" class="fluid-img" />
             <div class="text">
               <h3>Website design for SCFC Canada</h3>
               <p>
@@ -246,7 +251,11 @@
 
           <!-- case studyy 2 -->
           <div class="case-study card2">
-            <img src="images/Case-study__image (1).png" alt="" />
+            <img
+              src="images/Case-study__image (1).png"
+              alt=""
+              class="fluid-img"
+            />
             <div class="text">
               <h3>Website design for SCFC Canada</h3>
               <p>
@@ -266,7 +275,11 @@
 
           <!-- case study 3 -->
           <div class="case-study card3">
-            <img src="images/Case-study__image (2).png" alt="" />
+            <img
+              src="images/Case-study__image (2).png"
+              alt=""
+              class="fluid-img"
+            />
             <div class="text">
               <h3>Website design for SCFC Canada</h3>
               <p>
@@ -319,10 +332,10 @@
                 </div>
               </div>
             </div>
-            <img src="images\Rectangle 19.png" alt="" />
+            <img src="images\Rectangle 19.png" alt="" class="fluid-img" />
           </div>
           <div class="way-of-working-card">
-            <img src="images\Rectangle 18.png" alt="" />
+            <img src="images\Rectangle 18.png" alt="" class="fluid-img" />
             <div class="content">
               <h3>Build the right team to scale</h3>
               <p>
@@ -341,7 +354,11 @@
 
               <div class="avatar">
                 <div class="img2">
-                  <img src="images/Ellipse 1 (2).png" alt="" />
+                  <img
+                    src="images/Ellipse 1 (2).png"
+                    alt=""
+                    class="fluid-img"
+                  />
                 </div>
                 <div class="info">
                   <p class="username">jeewa markram</p>
@@ -369,7 +386,11 @@
 
               <div class="avatar">
                 <div class="img2">
-                  <img src="images/Ellipse 1 (3).png" alt="" />
+                  <img
+                    src="images/Ellipse 1 (3).png"
+                    alt=""
+                    class="fluid-img"
+                  />
                 </div>
                 <div class="info">
                   <p class="username">jeewa markram</p>
@@ -377,7 +398,7 @@
                 </div>
               </div>
             </div>
-            <img src="images\Rectangle 17.png" alt="" />
+            <img src="images\Rectangle 17.png" alt="" class="fluid-img" />
           </div>
         </div>
       </section>
